--- a/SoloLevelling.vcxproj
+++ b/SoloLevelling.vcxproj
@@ -67,7 +67,7 @@
     <ClCompile Include="cheat\cheat.cpp" />
     <ClCompile Include="cheat\features\DamageHack.cpp" />
     <ClCompile Include="cheat\features\DumbEnemies.cpp" />
-    <ClCompile Include="cheat\features\InfiniteMissionTime.cpp" />
+    <ClCompile Include="cheat\features\MissionTime.cpp" />
     <ClCompile Include="cheat\features\NoCooldown.cpp" />
     <ClCompile Include="cheat\features\PlayerSpeed.cpp" />
     <ClCompile Include="cheat\features\TimeScale.cpp" />
@@ -110,7 +110,7 @@
     <ClInclude Include="cheat\cheat.h" />
     <ClInclude Include="cheat\features\DamageHack.h" />
     <ClInclude Include="cheat\features\DumbEnemies.h" />
-    <ClInclude Include="cheat\features\InfiniteMissionTime.h" />
+    <ClInclude Include="cheat\features\MissionTime.h" />
     <ClInclude Include="cheat\features\NoCooldown.h" />
     <ClInclude Include="cheat\features\PlayerSpeed.h" />
     <ClInclude Include="cheat\features\TimeScale.h" />
