feat: Use event handler

--- a/src/SoloLevelling.vcxproj
+++ b/src/SoloLevelling.vcxproj
@@ -96,6 +96,21 @@ if %errorlevel% == 0 (
     <ClInclude Include="game\cheat\features\TimeScale.h" />
     <ClInclude Include="game\cheat\vars.h" />
     <ClInclude Include="game\Core\Core.h" />
+    <ClInclude Include="game\events.h" />
+    <ClInclude Include="game\events\event.hpp" />
+    <ClInclude Include="game\events\handlers\abstracteventhandler.hpp" />
+    <ClInclude Include="game\events\handlers\eventhandlerptr.h" />
+    <ClInclude Include="game\events\handlers\functoreventhandler.hpp" />
+    <ClInclude Include="game\events\handlers\handlercast.hpp" />
+    <ClInclude Include="game\events\handlers\helpers\innerholder.hpp" />
+    <ClInclude Include="game\events\handlers\helpers\objectsaver.hpp" />
+    <ClInclude Include="game\events\handlers\methodeventhandler.hpp" />
+    <ClInclude Include="game\events\helpers\is_equatable.hpp" />
+    <ClInclude Include="game\events\joins\abstracteventjoin.h" />
+    <ClInclude Include="game\events\joins\eventjoinwrapper.h" />
+    <ClInclude Include="game\events\joins\eventjoinwrapper.hpp" />
+    <ClInclude Include="game\events\joins\handlereventjoin.h" />
+    <ClInclude Include="game\events\joins\handlereventjoin.hpp" />
     <ClInclude Include="game\Exports\Exports.h" />
     <ClInclude Include="game\Exports\Resources.h" />
     <ClInclude Include="game\game-utils.hpp" />
@@ -157,6 +172,9 @@ if %errorlevel% == 0 (
     <ClCompile Include="game\cheat\vars.cpp" />
     <ClCompile Include="game\Core\Core.cpp" />
     <ClCompile Include="game\dllmain.cpp" />
+    <ClCompile Include="game\events.cpp" />
+    <ClCompile Include="game\events\joins\abstracteventjoin.cpp" />
+    <ClCompile Include="game\events\joins\eventjoinwrapper.cpp" />
     <ClCompile Include="game\Exports\Exports.cpp" />
     <ClCompile Include="game\Memory.cpp" />
     <ClCompile Include="game\Render\Backend\DX11Hook.cpp" />
