--- a/src/SoloLevelling.vcxproj
+++ b/src/SoloLevelling.vcxproj
@@ -34,6 +34,9 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <TargetName>winhttp.dll</TargetName>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -68,7 +71,7 @@ if %errorlevel% == 0 (
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>if not exist "$(SolutionDir)PostBuildEvent.cmd" (
-    echo xcopy /f /y "$(TargetDir)$(ProjectName).dll" "{PATH_TO_GAME}\winhttp.dll*" &gt; "$(SolutionDir)PostBuildEvent.cmd"
+    echo xcopy /f /y "$(TargetDir)$(TargetName).dll" "{PATH_TO_GAME}\winhttp.dll*" &gt; "$(SolutionDir)PostBuildEvent.cmd"
 )</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
