--- a/src/SoloLevelling.vcxproj
+++ b/src/SoloLevelling.vcxproj
@@ -90,6 +90,7 @@ if %errorlevel% == 0 (
     <ClInclude Include="game\appdata\il2cpp-types.h" />
     <ClInclude Include="game\cheat\cheat.h" />
     <ClInclude Include="game\cheat\features\DamageHack.h" />
+    <ClInclude Include="game\cheat\features\DisableWebView.h" />
     <ClInclude Include="game\cheat\features\DumbEnemies.h" />
     <ClInclude Include="game\cheat\features\FovChanger.h" />
     <ClInclude Include="game\cheat\features\FPSUnlock.h" />
@@ -168,6 +169,7 @@ if %errorlevel% == 0 (
     <ClCompile Include="game\appdata\il2cpp-init.cpp" />
     <ClCompile Include="game\cheat\cheat.cpp" />
     <ClCompile Include="game\cheat\features\DamageHack.cpp" />
+    <ClCompile Include="game\cheat\features\DisableWebView.cpp" />
     <ClCompile Include="game\cheat\features\DumbEnemies.cpp" />
     <ClCompile Include="game\cheat\features\FovChanger.cpp" />
     <ClCompile Include="game\cheat\features\FPSUnlock.cpp" />
