--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,6 @@ jobs:
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.1
 
-    - name: Create PostBuildEvent.cmd
-      run: |
-        $currentDir = Get-Location
-        echo cls > "$currentDir\PostBuildEvent.cmd"
-
     - name: Build
       run: |
         msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} ${{ env.SOLUTION_FILE_PATH }}
@@ -36,5 +31,5 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         name: build-artifact
-        path: ./x64/Release/*
+        path: ./bin/Release-x64/*
         if-no-files-found: error
