feat: Improve Damage Hack

--- a/src/SoloLevelling.vcxproj
+++ b/src/SoloLevelling.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="game\cheat\features\DumbEnemies.h" />
     <ClInclude Include="game\cheat\features\FovChanger.h" />
     <ClInclude Include="game\cheat\features\FPSUnlock.h" />
+    <ClInclude Include="game\cheat\features\GodMode.h" />
     <ClInclude Include="game\cheat\features\MissionTime.h" />
     <ClInclude Include="game\cheat\features\NoCooldown.h" />
     <ClInclude Include="game\cheat\features\PlayerSpeed.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="game\cheat\features\DumbEnemies.cpp" />
     <ClCompile Include="game\cheat\features\FovChanger.cpp" />
     <ClCompile Include="game\cheat\features\FPSUnlock.cpp" />
+    <ClCompile Include="game\cheat\features\GodMode.cpp" />
     <ClCompile Include="game\cheat\features\MissionTime.cpp" />
     <ClCompile Include="game\cheat\features\NoCooldown.cpp" />
     <ClCompile Include="game\cheat\features\PlayerSpeed.cpp" />
