--- a/src/SoloLevelling.vcxproj.filters
+++ b/src/SoloLevelling.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClInclude Include="game\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="game\cheat\features\GodMode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vendor\CommandMenu\src\Menu.cpp">
@@ -408,6 +411,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="game\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="game\cheat\features\GodMode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
